only needs an impressum now...

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 <body>
     <header>
         <h1>SS58 to Emoji Converter</h1>
-        <p>Convert Substrate addresses to unique emoji sequences for easy visual identification</p>
+        <p>Convert Polkadot addresses to unique emoji sequences for easy visual identification. This is a fun project mainly focused around fun visual elements, and not focused on security. Do not use this in a productive setting.</p>
     </header>
     
     <main>
